--- a/package.json
+++ b/package.json
@@ -9,11 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/hooks": "^3.0.0",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "apisauce": "^3.0.1",
+    "axios": "^1.7.2",
+    "base-64": "^1.0.0",
+    "core-js": "^3.37.1",
+    "expo": "^51.0.8",
+    "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.1",
+    "expo-device": "~6.0.2",
+    "expo-font": "~12.0.4",
+    "expo-image": "~1.12.9",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.3",
+    "expo-permissions": "^14.4.0",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.14",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "lottie-react-native": "6.7.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "yup": "^1.4.0",
+    "expo-secure-store": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
